--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,15 @@ rvm:
   - 2.0.0
 
 node_js:
-  - '0.8'
   - '0.10'
 
 before_script:
   - 'npm install -g bower grunt-cli'
   - 'npm install'
   - 'bower install'
+#  To run  a real browser (Firefox) with a virtual screen.
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
 
 script:
   - 'grunt test'
