--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,14 @@ rvm:
 node_js:
   - '0.10'
 
+env:
+  - "SOMETHING=ciao"
+
+
 before_script:
   - 'npm install -g bower grunt-cli'
-  - 'npm install'
   - 'bower install'
+  - 'bundle install'
 #  To run  a real browser (Firefox) with a virtual screen.
   - 'export DISPLAY=:99.0'
   - 'sh -e /etc/init.d/xvfb start'
