--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 
 
 before_script:
-  - 'reset.sh'
+  - 'sh reset.sh'
 #  To run  a real browser (Firefox) with a virtual screen.
   - 'export DISPLAY=:99.0'
   - 'sh -e /etc/init.d/xvfb start'
