--- a/package.json
+++ b/package.json
@@ -1,91 +1,107 @@
 {
-    "name": "Skeleton",
-    "version": "0.0.0",
-    "description": "New and improved Skeleton",
-    "private": true,
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "dependencies": {
-        "express": "~3.4.3",
-        "lodash": "~2.4.1",
-        "ejs": "~0.8.4",
-        "grunt-jasmine-node": "~0.2.1",
-        "jspath": "~0.2.11",
-        "connect-redis": "^2.0.0",
-        "express-session": "^1.0.4",
-        "body-parser": "^1.0.2",
-        "cookie-parser": "^1.0.1",
-        "cookie-session": "^1.0.1",
-        "errorhandler": "^1.0.1",
-        "method-override": "^1.0.0",
-        "serve-favicon": "^2.0.0",
-        "serve-static": "^1.1.0",
-        "morgan": "^1.0.0",
-        "q": "^1.0.1",
-        "passport-facebook": "^1.0.3",
-        "passport": "^0.2.0",
-        "bcrypt": "^0.7.8",
-        "passport-local": "^1.0.0",
-        "mongoose": "^3.8.8"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-autoprefixer": "~0.4.0",
-        "grunt-bower-install": "~0.7.0",
-        "grunt-concurrent": "~0.4.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-compass": "~0.6.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-copy": "~0.4.1",
-        "grunt-contrib-cssmin": "~0.7.0",
-        "grunt-contrib-htmlmin": "~0.1.3",
-        "jpegtran-bin": "0.2.0",
-        "grunt-contrib-imagemin": "~0.3.0",
-        "grunt-contrib-jshint": "~0.7.1",
-        "grunt-contrib-uglify": "~0.2.0",
-        "grunt-contrib-watch": "~0.5.2",
-        "grunt-google-cdn": "~0.2.0",
-        "grunt-newer": "~0.5.4",
-        "grunt-ngmin": "~0.0.2",
-        "grunt-rev": "~0.1.0",
-        "grunt-svgmin": "~0.2.0",
-        "grunt-usemin": "~2.0.0",
-        "jshint-stylish": "~0.1.3",
-        "load-grunt-tasks": "~0.2.0",
-        "time-grunt": "~0.2.1",
-        "grunt-express-server": "~0.4.5",
-        "grunt-open": "~0.2.0",
-        "connect-livereload": "~0.3.0",
-        "karma-ng-scenario": "~0.1.0",
-        "grunt-karma": "~0.6.2",
-        "grunt-protractor-runner": "0.2.4",
-        "grunt-angular-gettext": "*",
-        "karma-firefox-launcher": "~0.1.3",
-        "karma-script-launcher": "~0.1.0",
-        "karma-html2js-preprocessor": "~0.1.0",
-        "karma-jasmine": "~0.1.5",
-        "karma-chrome-launcher": "~0.1.2",
-        "requirejs": "~2.1.10",
-        "karma-requirejs": "~0.2.1",
-        "karma-coffee-preprocessor": "~0.1.2",
-        "karma-phantomjs-launcher": "~0.1.1",
-        "karma": "~0.10.9",
-        "karma-ng-html2js-preprocessor": "~0.1.0",
-        "cucumber": "~0.3.3",
-        "chai": "~1.9.0",
-        "grunt-template": "^0.2.3",
-        "grunt-string-replace": "^0.2.7",
-        "grunt-curl": "~1.4.0",
-        "grunt-shell-spawn": "~0.3.0",
-        "request": "~2.34.0"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "scripts": {
-        "test": "grunt test"
-    }
+  "name": "Skeleton",
+  "version": "0.0.0",
+  "description": "New and improved Skeleton",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "dependencies": {
+    "express": "~4.10.0",
+    "lodash": "~2.4.1",
+    "ejs": "~1.0.0",
+    "grunt-jasmine-node": "~0.2.1",
+    "jspath": "~0.2.13",
+    "connect-redis": "^2.1.0",
+    "express-session": "^1.9.1",
+    "body-parser": "^1.9.1",
+    "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.0.2",
+    "errorhandler": "^1.2.2",
+    "method-override": "^2.3.0",
+    "serve-favicon": "^2.1.6",
+    "serve-static": "^1.7.1",
+    "morgan": "^1.4.1",
+    "q": "^1.0.1",
+    "passport-facebook": "^1.0.3",
+    "passport": "^0.2.1",
+    "bcrypt": "^0.8.0",
+    "passport-local": "^1.0.0",
+    "mongoose": "^3.8.18"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-wiredep": "~1.9.x",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-coffee": "~0.12.0",
+    "grunt-contrib-compass": "~1.0.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-htmlmin": "~0.3.0",
+    "jpegtran-bin": "2.0.0",
+    "grunt-contrib-imagemin": "~0.9.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-google-cdn": "~0.4.3",
+    "grunt-newer": "~0.8.0",
+    "grunt-ngmin": "~0.0.3",
+    "grunt-rev": "~0.1.0",
+    "grunt-svgmin": "~1.0.0",
+    "grunt-usemin": "~2.5.0",
+    "jshint-stylish": "~1.0.0",
+    "load-grunt-tasks": "~1.0.0",
+    "time-grunt": "~1.0.0",
+    "grunt-express-server": "~0.4.19",
+    "grunt-open": "~0.2.3",
+    "connect-livereload": "~0.5.0",
+    "karma-ng-scenario": "~0.1.0",
+    "grunt-karma": "~0.9.0",
+    "grunt-protractor-runner": "1.1.4",
+    "grunt-angular-gettext": "*",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-script-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.5",
+    "requirejs": "~2.1.15",
+    "karma-requirejs": "~0.2.2",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma": "~0.12.24",
+    "karma-ng-html2js-preprocessor": "~0.1.1",
+    "cucumber": "~0.4.4",
+    "chai": "~1.9.2",
+    "grunt-template": "^0.2.3",
+    "grunt-string-replace": "^1.0.0",
+    "grunt-curl": "~2.0.3",
+    "grunt-shell-spawn": "~0.3.0",
+    "request": "~2.46.0",
+    "gulp-rename": "^1.2.0",
+    "del": "^0.1.3",
+    "gulp-livereload": "^2.1.1",
+    "gulp-concat": "^2.4.1",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-jshint": "^1.8.5",
+    "gulp-uglify": "^1.0.1",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-cache": "^0.2.4",
+    "gulp-imagemin": "^1.2.1",
+    "gulp-notify": "^2.0.0",
+    "gulp": "^3.8.9",
+    "gulp-usemin": "^0.3.8",
+    "gulp-minify-html": "^0.1.6",
+    "gulp-ngmin": "^0.3.0",
+    "gulp-rev": "^2.0.1",
+    "gulp-sass": "^1.2.0"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  }
 }
